# Masterarbeit-Codebase

./: .gitignore  CMakeLists.txt  Doxyfile  mainpage.md
fem/include/: CustomExceptions.h  LagrangePolynomial.h  bodyforce.h  boundaryvalues.h  femtime.h  getstrain.h  kronecker.h  norm.h  pointhistory.h  timer.h  toplevel.h
fem/source/: main.cpp
material/include/: DamInter.h  GenElaInter.h  LinElaInter.h  NeoHooke.h  small-strain.h
mesh/: 2d.msh  3d.msh  inclusion_2d.geo  inclusion_2d.msh  inclusion_2d_full.geo  inclusion_3d.geo  inclusion_3d.msh  mesh_manual-2d-noI.msh  mesh_manual-2d-onlyI.msh  mesh_manual-2d.msh  mesh_manual-3d-noI.msh  mesh_manual-3d.msh  structure_full_interface.geo  structure_full_interface.msh  structure_half_interface.geo
python/: interface_creator.py  postproc_force_disp.py
